# SCL_Channel_Coding_Design

./: AGENTS.md  discuss.md
Task/BCH/block/current/: CMakeLists.txt
Task/BCH/block/current/include/bch_block/: bch_block.hpp
Task/BCH/block/current/src/: bch_block.cpp
Task/BCH/block/current/tests/: export_bch_block_detail.cpp  export_bch_block_gf_detail.cpp  export_bch_block_illegal.cpp  export_bch_block_pool_encoder.cpp  export_bch_block_reference.cpp  test_bch_block.cpp
Task/BCH/segmented/current/: CMakeLists.txt
Task/BCH/segmented/current/include/bch_segmented/: bch15_encoder.hpp  bch15_lookup_decoder.hpp  bch15_lookup_table.hpp  bch15_segmented_adapter.hpp  bch15_syndrome.hpp  bch15_types.hpp
Task/BCH/segmented/current/src/: bch15_encoder.cpp  bch15_lookup_decoder.cpp  bch15_lookup_table.cpp  bch15_segmented_adapter.cpp  bch15_syndrome.cpp
Task/BCH/segmented/current/tests/: export_bch06_cpp_reference.cpp  test_bch15_encoder.cpp  test_bch15_lookup_decoder.cpp  test_bch15_segmented_adapter.cpp  test_bch15_syndrome_table.cpp
Task/BCH/simulation/current/: CMakeLists.txt
Task/BCH/simulation/current/include/bch_simulation/: bch_awgn_simulation.hpp  bch_case_adapter.hpp  bch_multipath_simulation.hpp  fixed_multipath_mmse.hpp
Task/BCH/simulation/current/src/: bch_awgn_runner.cpp  bch_awgn_simulation.cpp  bch_case_adapter.cpp  bch_multipath_runner.cpp  bch_multipath_simulation.cpp  fixed_multipath_mmse.cpp
Task/BCH/simulation/current/tests/: export_bch_s2_matlab_vectors.cpp  test_bch11_noiseless.cpp  test_bch12_awgn.cpp  test_bch_s2_mmse.cpp
Task/BCH/simulation/matlab_official_validation/: .gitignore  CMakeLists.txt
Task/BCH/simulation/matlab_official_validation/configs/: bch16v_official_awgn_config.json
Task/BCH/simulation/matlab_official_validation/cpp/: bch16v_export_shared_input.cpp
Task/BCH/simulation/matlab_official_validation/matlab/: load_shared_input_batch.m  official_decode_b200.m  official_decode_s200.m  official_encode_b200.m  official_encode_s200.m  run_bch16v_official_awgn.m  run_bch16w3_official_codec.m  run_bch_s2_multipath_reference.m
Task/BCH/simulation/matlab_official_validation/scripts/: audit_bch16v.py  compare_cpp_matlab_official.py  plot_bch16v_cpp_vs_matlab.py  run_bch16v.py  run_matlab_parallel.py
Task/BCH/simulation/matlab_official_validation/stages/bch16v_matlab_official_awgn_curve_reference/: acceptance_matrix.csv  audit_result.json  changed_files.md  changes.patch  commands_used.md  cpp_formal_source_manifest.json  cpp_matlab_official_summary_compare.csv  figure_data_audit.csv  figure_data_bch_b200_cpp_vs_matlab_ber.csv  figure_data_bch_b200_cpp_vs_matlab_fer.csv  figure_data_bch_s200_cpp_vs_matlab_ber.csv  figure_data_bch_s200_cpp_vs_matlab_fer.csv  frozen_config.csv  git_commit.txt  known_issues.md  manifest.json  matlab_environment.json  matlab_official_formal_summary.csv  official_encoding_compare_summary.csv  official_parameter_audit.csv  paired_frame_error_contingency.csv  (+9 more)
Task/Common/: CMakeLists.txt
Task/Common/Plan/: v1.0-三类信道编码公共基础仿真规划_码率定义修订版.md  v2.0-三类信道编码公共基础仿真详细规划.md
Task/Common/config/: common04_formal_template.json  common04_prescan.json  common04_smoke.json  result_schema.json  seed_policy.json  stop_rules.json
Task/Common/docs/: checkpoint_definition.md  metric_definition.md  plot_naming_rules.md  seed_policy.md  terminology.md
Task/Common/include/common/: awgn_channel.hpp  checkpoint.hpp  common.hpp  decoder_input.hpp  demodulation.hpp  frame.hpp  frame_pool.hpp  gaussian_noise.hpp  modulation.hpp  noise_pool.hpp  random_policy.hpp  result_schema.hpp  result_types.hpp  simulation_control.hpp  simulation_metrics.hpp  simulation_pipeline.hpp  types.hpp
Task/Common/scripts/: build_common04.py  check_common02.py  check_common03.py  check_common04.py  compare_common04_cpp_python.py  generate_common03_frame_pool.py  generate_common04_noise_pool.py  inspect_common04_noise_pool.py  merge_common04_shards.py  plot_common_results.py  validate_common01_definition.py  validate_common04_noise_pool.py
Task/Common/src/: awgn_channel.cpp  checkpoint.cpp  demodulation.cpp  gaussian_noise.cpp  modulation.cpp  noise_pool.cpp  random_policy.cpp  result_schema.cpp  simulation_control.cpp  simulation_metrics.cpp  simulation_pipeline.cpp
Task/Common/stages/stage01_common_definition/: changed_files.md  changes.patch  commands_used.md  frozen_config.csv  git_commit.txt  known_issues.md  manifest.json  stage_plan.md  validation_report.md
Task/Common/stages/stage01_common_definition/snapshot/: README.md
Task/Common/stages/stage02_common_types_interfaces/: changed_files.md  changes.patch  commands_used.md  frozen_config.csv  git_commit.txt  known_issues.md  manifest.json  stage_plan.md  validation_report.md
Task/Common/stages/stage02_common_types_interfaces/snapshot/: README.md
Task/Common/stages/stage03_common_frame_pool/: changed_files.md  changes.patch  commands_used.md  cpp_python_comparison.csv  fixture_hashes.csv  frame_pool_format.md  frozen_config.csv  git_commit.txt  golden_vectors.csv  known_issues.md  manifest.json  negative_test_results.csv  stage_plan.md  validation_report.md
Task/Common/stages/stage03_common_frame_pool/snapshot/: README.md
Task/Common/stages/stage04_common_simulation_foundation/: acceptance_matrix.csv  changed_files.md  commands_used.md  cpp_python_comparison.csv  formal_capacity_validation.csv  frozen_config.csv  identity_baseline_results.csv  known_issues.md  manifest.json  negative_test_results.csv  no_noise_identity_results.csv  noise_pool_format.md  random_policy.md  result_schema.md  shard_merge_comparison.csv  simulation_formula.md  stage_plan.md  validation_report.md
Task/Common/tests/stage02/: test_common02_types_interfaces.cpp
Task/Common/tests/stage03/: test_common03_frame_pool.cpp
Task/Common/tests/stage04/: common04_identity_runner.cpp  common04_reference_runner.cpp  test_common04_checkpoint.cpp  test_common04_gaussian_noise.cpp  test_common04_integration.cpp  test_common04_metrics_control.cpp  test_common04_modulation_awgn.cpp  test_common04_random_policy.cpp
(+633 files in other folders)
