cmake_minimum_required(VERSION 3.16)
project(BchBlock LANGUAGES CXX)
add_library(bch_block src/bch_block.cpp)
target_include_directories(bch_block PUBLIC include ../../../Common/include)
target_compile_features(bch_block PUBLIC cxx_std_17)
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  target_compile_options(bch_block PRIVATE -Wall -Wextra -Wpedantic)
endif()
add_executable(test_bch_block tests/test_bch_block.cpp)
target_link_libraries(test_bch_block PRIVATE bch_block)
add_executable(export_bch_block_reference tests/export_bch_block_reference.cpp)
target_link_libraries(export_bch_block_reference PRIVATE bch_block)
add_executable(export_bch_block_detail tests/export_bch_block_detail.cpp)
target_link_libraries(export_bch_block_detail PRIVATE bch_block)
add_executable(export_bch_block_pool_encoder tests/export_bch_block_pool_encoder.cpp)
target_link_libraries(export_bch_block_pool_encoder PRIVATE bch_block)
add_executable(export_bch_block_gf_detail tests/export_bch_block_gf_detail.cpp)
target_link_libraries(export_bch_block_gf_detail PRIVATE bch_block)
add_executable(export_bch_block_illegal tests/export_bch_block_illegal.cpp)
target_link_libraries(export_bch_block_illegal PRIVATE bch_block)
enable_testing()
add_test(NAME bch_block COMMAND test_bch_block)
