cmake_minimum_required(VERSION 3.16)
project(Bch15Encoder LANGUAGES CXX)
add_library(bch15_encoder src/bch15_encoder.cpp src/bch15_syndrome.cpp src/bch15_lookup_table.cpp)
target_include_directories(bch15_encoder PUBLIC include ../../../Common/include)
target_compile_features(bch15_encoder PUBLIC cxx_std_17)
add_executable(test_bch15_encoder tests/test_bch15_encoder.cpp)
target_link_libraries(test_bch15_encoder PRIVATE bch15_encoder)
enable_testing()
add_test(NAME bch15_encoder COMMAND test_bch15_encoder ${CMAKE_CURRENT_SOURCE_DIR}/../stages/bch02_bch15_encoder ${CMAKE_CURRENT_SOURCE_DIR}/../config/bch15_reference_vectors.csv)
add_executable(test_bch15_syndrome_table tests/test_bch15_syndrome_table.cpp)
target_link_libraries(test_bch15_syndrome_table PRIVATE bch15_encoder)
add_test(NAME bch15_syndrome_table COMMAND test_bch15_syndrome_table ${CMAKE_CURRENT_SOURCE_DIR}/../stages/bch03_bch15_syndrome_table)
